2011-01-13  Dieter Verfaillie  <dieterv@optionexplicit.be>

		* pygtk-gtkaboutdialog.xml: fix (s|g)et_name and (s|g)et_program_name.
		* pygtk-gtkaccessible.xml: add new methods
		* pygtk-gtkaction.xml: add new methods

2011-01-12  Dieter Verfaillie  <dieterv@optionexplicit.be>

		* pygtk-gtkliststore.xml: fix implements section (bug 634747)
		* pygtk-gtktreestore.xml: fix implements section
		* pygtk-gtknotebook.xml: fix gtk.Notebook.page_num(child) documentation (bug 634563)

2010-09-10  Rafael Villar Burke  <pachi@rvburke.com>

		* pygtk-gtkcurve.xml: fix swapped get_vector/set_vector names

2010-04-09  Rafael Villar Burke  <pachi@rvburke.com>

	Bug 615270 - Website typo in docs for gtk.Buildable

		* pygtk-gtkbuildable.xml: fix a small typo in class name.

2009-03-20  Gian Mario Tagliaretti  <gianmt@gnome.org>

	Bug 575604 ¿ typo in gtk.AccelGroup.connect_group

	* pygtk-gtkaccelgroup.xml: fix a small typo in method name.

2009-03-09  Gian Mario Tagliaretti  <gianmt@gnome.org>

	Bug 574640 ¿ gtk.FileChooserButton "file-set" signal is not documented

	* pygtk-gtkfilechooserbutton.xml: Add "file-set" signal.

2009-03-07  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gdk-functions.xml:
	Add gtk.gdk.selection_owner_[gs]et_for_display

2009-03-05  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gdkwindow.xml: Fix XML code between comments.

2009-03-05  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gdkwindow.xml:
	* pygtk-gdkscreen.xml: Update docs to 2.14

2009-03-05  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* Makefile.am:
	* pygtk-gdk-classes.xml:
	* pygtk-gdkapplaunchcontext.xml: Add new class gtk.gdk.AppLaunchContext.

2009-03-04  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkwindow.xml: Update docs to 2.14
	
	* Makefile.am:
	* pygtk-gtk-classes.xml:
	* pygtk-gtktoolshell.xml: Add new class gtk.ToolShell.

2009-03-01  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtktoolitem.xml:
	* pygtk-gtktooltip.xml: