@@ -3,6 +3,7 @@
 		* pygtk-gtkaboutdialog.xml: fix (s|g)et_name and (s|g)et_program_name.
 		* pygtk-gtkaccessible.xml: add new methods
 		* pygtk-gtkaction.xml: add new methods
+		* pygtk-gtkassistant.xml: add new commit method
 
 2011-01-12  Dieter Verfaillie  <dieterv@optionexplicit.be>
 
